2013-04-13 Dan Locks <dwlocks@zmanda.com>
	* packaging/sun-pkg/buildpkg: remove "use warnings" for solaris 8 compatibility

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Document many storage setting.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Config.pl: Add append keyword for dump-selection check.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add APPEND keyword to tag and dump-selection.
	* man/xml-source/amanda.conf.5.xml: Document tag and dump-selection.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Parse erase-volume in a storage.
	* common-src/conffile.h: Add STORAGE_ERASE_VOLUME.
	* man/xml-source/amanda.conf.5.xml: Document erase-volume.
	* perl/Amanda/Config.swg: Add STORAGE_ERASE_VOLUME.
	* perl/Amanda/Changer.pm: Fix warning when meta not set.
	* perl/Amanda/IPC/LineProtocol.pm:Allow delayed start of reading.
	* perl/Amanda/Storage.pm: New erase_no_retention method.
	* perl/Amanda/Taper/Controller.pm: Call $storage->erase_no_retention().
	* perl/Amanda/Taper/Scan.pm: Use Debug qw( debug ).
	* server-src/amrmtape.pl: hanlde multiple storage.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Add force-level-1 command.
	* man/xml-source/amadmin.8.xml: Document force-level-1 command.
	* server-src/infofile.h: Add FORCE_LEVEL_1.
	* server-src/planner.c: Handle FORCE_LEVEL_1.

2013-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c, common-src/conffile.h: Add tag in dumptype
	  and dump-selection in storage.
	* perl/Amanda/Config.swg: Add new configuration setting.
	* installcheck/Amanda_Config.pl: Check parsing dump-selection.
	* server-src/diskfile.h: Add tags to disk_t.
	* server-src/diskfile.c: set disk_t->tags.
	* server-src/driver.c: Use tags and dump-selection.
	* perl/Amanda/Storage.pm: Set $self->{'dump_selection'}.
